--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -23,17 +23,6 @@ http {
   tcp_nopush   on;
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
-  server { # php/fastcgi
-    listen       80;
-    server_name  domain1.com www.domain1.com;
-    access_log   logs/domain1.access.log  main;
-    root         html;
-
-    location ~ \.php$ {
-      fastcgi_pass   127.0.0.1:1025;
-    }
-  }
-
   server { # simple reverse-proxy
     listen       80;
     server_name  domain2.com www.domain2.com;
@@ -63,8 +52,8 @@ http {
     server_name     big.server.com;
     access_log      logs/big.server.access.log main;
 
-    location / {
-      proxy_pass      http://big_server_com;
+    location /api {
+      proxy_pass      http://127.0.0.1:5036/;
     }
   }
 }
