--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,8 +9,8 @@ http {
     server_name  domain2.com www.domain2.com;
 
     # pass requests for dynamic content to rails/turbogears/zope, et al
-    location /api {
-      proxy_pass      http://127.0.0.1:5036;
+    location /api/ {
+      proxy_pass      http://127.0.0.1:5036/;
     }
   }
 
