--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -10,7 +10,7 @@ http {
 
     # pass requests for dynamic content to rails/turbogears/zope, et al
     location /api/ {
-      proxy_pass      http://backed:3000/;
+      proxy_pass      http://backend:3000/;
     }
   }
 
