--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,6 +12,14 @@ http {
     location /api/ {
       proxy_pass      http://backend:3000/;
     }
+    
+    location /admin/ {
+       proxy_pass      http://admin:3000/;
+    }
+    location / {
+       proxy_pass      http://frontend:3000/;
+    }
+    
   }
 
 }
