--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,32 @@
 name: recommendation-system
 services:
-#  admin:
-#    image: admin
-#    networks:
-#      - backend
-#    ports:
-#      - '3001:3000'
-#    restart: always
-#    hostname: admin
-#    depends_on:
-#      backend:
-#        condition: service_healthy
+  admin:
+    build: https://github.com/ZPI-Recommendation-System/Recommendation-admin.git
+    env_file:
+      - config/.admin-env
+    networks:
+      - frontend
+    ports:
+      - '3001:3000'
+    restart: always
+    hostname: admin
+    depends_on:
+      backend:
+        condition: service_healthy
 
-#  frontend:
-#    image: frontend
-#    networks:
-#      - frontend
-#    ports:
-#      - '3002:3000'
-#    restart: always
-#    hostname: frontend
-#    depends_on:
-#      backend:
-#        condition: service_healthy
+  frontend:
+    build: https://github.com/ZPI-Recommendation-System/Recommendation-Frontend.git
+    env_file:
+      - config/.frontend-env
+    networks:
+      - frontend
+    ports:
+      - '3002:3000'
+    restart: always
+    hostname: frontend
+    depends_on:
+      backend:
+        condition: service_healthy
 
   backend:
     build: https://github.com/ZPI-Recommendation-System/Recommendation-Backend.git
