--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - '3001:3000'
     restart: always
     hostname: admin
+    healthcheck:
+      test: "exit 0"
     depends_on:
       backend:
         condition: service_healthy
@@ -24,6 +26,8 @@ services:
       - '3002:3000'
     restart: always
     hostname: frontend
+    healthcheck:
+      test: "exit 0"
     depends_on:
       backend:
         condition: service_healthy
@@ -84,6 +88,13 @@ services:
       - backend
     ports:
       - '80:80'
+    depends_on:
+        backend:
+          condition: service_healthy
+        frontend:
+          condition: service_healthy
+        admin:
+          condition: service_healthy
 
 networks:
   backend: {}
