--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -14,6 +14,7 @@ http {
     }
     
     location /admin/ {
+       proxy_buffering off;
        proxy_pass      http://admin:3000/;
     }
     location / {
