--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,6 +15,7 @@ http {
     
     location /admin/ {
        proxy_buffering off;
+       proxy_pass_header Content-Type;
        proxy_pass      http://admin:3000/;
     }
     location / {
