--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - '3002:3000'
     restart: always
     hostname: frontend
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     healthcheck:
       test: "exit 0"
     # depends_on:
@@ -52,6 +54,8 @@ services:
       - '5036:3000'
     healthcheck:
       test: "exit 0"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       db:
         condition: service_healthy
