--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-REACT_APP_API_URL=http://zpi.zgrate.ovh:5041/api
-PUBLIC_URL=http://zpi.zgrate.ovh:5041/admin
+# REACT_APP_API_URL=http://zpi.zgrate.ovh:5041/api
+# PUBLIC_URL=http://zpi.zgrate.ovh:5041/admin
+
+REACT_APP_API_URL=localhost/api
+PUBLIC_URL=
