--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,15 +13,21 @@ http {
       proxy_pass      http://backend:3000/;
     }
     
-    location /admin/ {
-       proxy_buffering off;
-       proxy_pass_header Content-Type;
-       proxy_pass      http://admin:3000/;
-    }
+
     location / {
        proxy_pass      http://frontend:3000/;
     }
     
+  }
+
+  server 
+  {
+    listen 8080;
+    server_name domain3.com www.domain3.com;
+
+    location / {
+       proxy_pass      http://admin:3000/;
+    }
   }
 
 }
