Changed to one port

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -17,17 +17,11 @@ http {
     location / {
        proxy_pass      http://frontend:3000/;
     }
-    
-  }
 
-  server 
-  {
-    listen 8080;
-    server_name domain3.com www.domain3.com;
-
-    location / {
+    location /admin {
        proxy_pass      http://admin:3000/;
     }
+    
   }
 
 }
